# slate

./: .gitignore  CNAME  LICENSE.txt  README.md  _config.yml  annotation_tool.py  ideas-for-improvement.md  ner-book.config  prior-work.md  pyproject.toml  setup.py  slate.py  todo.md  tutorial.md
example/: config-example.txt  input_data0.txt  input_data0.txt.annotations0  input_data0.txt.annotations1  input_data0.txt.annotations3  input_data0.txt.category.annotations0  input_data0.txt.category.annotations2  input_data0.txt.link.annotations2  input_data1.txt  label-example.md  link-example.data.md  link-example.md  list_with_disagreements  list_with_disagreements.link.txt  more-languages.txt
example/data/: input_data0.txt.category.annotations1  input_file_list.txt
paper/: acl19slate.bib  acl19slate.sty  acl19slate.tex  comparison.tex  makefile  post-publish-supp.tex
slate/: __init__.py  __main__.py  annotate.py  data.py  view.py
src/: annotate.py  config.py  data.py  view.py
tutorial/: config-example.txt  label-example.md  label.md  link-example.md  link.md  ner.md
tutorial/data/: input_data0.txt.category.annotations3  list_with_disagreements.category.txt
