[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "slate-nlp"
version = "1.1.1"
authors = [
  {name="Jonathan K. Kummerfeld", email="jonathan.kummerfeld@sydney.edu.au"},
]
description = "A terminal-based text annotation tool"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = '>=2.6, !=3.0.*, !=3.1.*, !=3.2.*, <4'
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

keywords = ["nlp", "annotation", "labeling", "natural-language-processing", "text-annotation"]

[tool.setuptools]
packages = ["slate"]

[project.urls]
"Homepage" = "https://jkk.name/slate/"
"Bug Tracker" = "https://github.com/jkkummerfeld/slate/issues"

[project.scripts]
slate = "slate.annotate:main"

[tool.setuptools_scm]
